# squid4win

./: .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .markdownlintignore  .mega-linter.yml  .yamllint.yml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.Build.props  LICENSE  NuGet.config  README.md  SUPPORT.md  Squid4Win.slnx  conandata.yml  conanfile.py  pyproject.toml  skills-lock.json  sonar-project.properties
.agents/design/: 0001-native-build-strategy.md  0002-conan-dependency-management.md  0003-automation-and-governance.md  0004-installer-payload-contract.md  0005-quality-and-distribution-automation.md  0006-target-state-architecture-reset.md  0007-windows-compiler-feasibility-boundary.md
.agents/skills/: conan2-package-creation  conan2-usage  gfm  megalinter
.github/: PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/instructions/: pull-request-review.instructions.md  repo-owned-skills.instructions.md  sonarqube_mcp.instructions.md  squid-version-upgrade.instructions.md
.github/workflows/: README.md  build-release-artifacts.yml  ci.yml  conan-update.yml  conan-validate-recipe-windows.yml  conan-validate-recipe.yml  dependabot-auto-merge.yml  package-manager-publish.yml  package-managers.yml  prerelease.yml  release.yml  service-runner-validation.yml  update-upstream.yml
conan/: squid-release.json
config/: build-profile.json  squid-version.json
scripts/: Apply-SquidSourcePatches.ps1  Assert-SquidServiceName.ps1  Build-Installer.ps1  Export-ConanWorkspaceRecipes.ps1  Export-PackageManagerMetadata.ps1  Get-AbsolutePath.ps1  Get-ConanRecipeOptionArguments.ps1  Get-InstallerVersion.ps1  Get-SquidBuildProfile.ps1  Get-SquidRelease.ps1  Initialize-NativeToolchain.ps1  Invoke-AuthenticodeSigning.ps1  Invoke-ConanRootRecipe.ps1  Invoke-ServiceRunnerValidation.ps1  Invoke-SmokeTests.ps1  Invoke-SquidBuild.ps1  PSScriptAnalyzerSettings.psd1  Publish-ChocolateyPackage.ps1  Publish-ScoopManifest.ps1  Publish-TrayApp.ps1  Publish-WingetManifest.ps1  Repair-SquidAutoconfHeader.ps1  Resolve-ConanHome.ps1  Resolve-Msys2Root.ps1  Resolve-SquidBuildLayout.ps1  Setup-Environment.ps1  Stage-ReleasePayload.ps1  Submit-GitHubPullRequest.ps1  Update-ConanLockfile.ps1  Update-SquidVersion.ps1  Write-ConanMsys2Profile.ps1
skills/: README.md
test_package/: conanfile.py
(+132 files in other folders)
